CICO-5338: fixed missing scrollbar inside bill view

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -1396,6 +1396,20 @@ body > div[ng-view] {
     }
   }
 
+  .bill-contain::-webkit-scrollbar {
+    -webkit-appearance: scrollbarthumb-vertical;
+    width: 4px;
+  }
+
+  .bill-contain::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .3);
+  }
+
+  .bill-contain::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, .5);
+  }
+
   .close-bill {
     position: absolute;
     right: -15px;
